Migrate "Quantum computing in practice" course (#3078)
Migrates the [Quantum computing in
practice](https://learning.quantum.ibm.com/course/quantum-computing-in-practice)
course from the learning platform.

[Preview
link](https://qiskit.github.io/documentation/pr-3078/learning/courses/quantum-computing-in-practice/)

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -614,3 +614,15 @@ notifications:
     - "@johannesgreiner"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
+  "learning/courses/quantum-computing-in-practice/introduction":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/mapping":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/applications-of-qc":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/utility-scale-qaoa":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/index":
+    - "@livlanes"
