--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -163,4 +163,11 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+
+    # Don't test any learning notebooks
+    "learning/courses/quantum-computing-in-practice/introduction.ipynb",
+    "learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb",
+    "learning/courses/quantum-computing-in-practice/mapping.ipynb",
+    "learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb",
+    "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
 ]
