Remove notebook from testing This appears to be an authentication issue which we can investigate later.

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -124,6 +124,7 @@ notebooks = [
 
     # These notebooks are failing with auth errors and need investigating
     "docs/guides/serverless-first-program.ipynb",
+    "docs/guides/serverless-run-first-workload.ipynb",
     "docs/guides/serverless-manage-resources.ipynb",
 
     # This notebook might work but we didn't have time to test it before merging
