--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
 commands = test-docs-notebooks {posargs} --config-path scripts/config/notebook-testing.toml
 
 [testenv:{lint,fix}]
-deps = 
+deps =
   squeaky==0.7.0
   ruff==0.7.1
 
@@ -28,5 +28,6 @@ commands =
 deps =
   -e scripts/nb-tester
   -e scripts/image-tester
+  -e scripts/notebook-normalizer
   pytest
 commands = pytest
