--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -19,5 +19,5 @@ scikit-learn~=1.6.1
 pyscf~=2.8.0; sys.platform != 'win32'
 python-sat~=1.8.dev16
 gem-suite~=0.1.6
-ffsim~=0.0.54
+ffsim~=0.0.54; sys.platform != 'win32'
 sympy~=1.14.0
