--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -163,4 +163,9 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+    "learning/courses/Quantum-machine-learning/Classical-ML-review.ipynb",
+    "learning/courses/Quantum-machine-learning/Data-encoding.ipynb",
+    "learning/courses/Quantum-machine-learning/Introduction.ipynb",
+    "learning/courses/Quantum-machine-learning/Quantum-kernel-methods.ipynb",
+    "learning/courses/Quantum-machine-learning/QVCs-QNNs.ipynb"
 ]
