Added course to index

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -614,3 +614,13 @@ notifications:
     - "@johannesgreiner"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
+  "learning/courses/Quantum-machine-learning/Classical-ML-review":
+    - "@christopher-porter1"
+  "learning/courses/Quantum-machine-learning/Data-encoding":
+    - "@christopher-porter1"
+  "learning/courses/Quantum-machine-learning/Introduction":
+    - "@christopher-porter1"
+  "learning/courses/Quantum-machine-learning/Quantum-kernel-methods":
+    - "@christopher-porter1"
+  "learning/courses/Quantum-machine-learning/QVCs-QNNs":
+    - "@christopher-porter1"
