--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,7 @@ skipsdist = true
 deps =
   -e scripts/nb-tester
   -r scripts/nb-tester/requirements.txt
-setenv = 
-    PYDEVD_DISABLE_FILE_VALIDATION=1
-    PYTHONDEVMODE=1
+setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
 commands = test-docs-notebooks {posargs} --config-path scripts/config/notebook-testing.toml
 
 [testenv:{lint,fix}]
