--- a/scripts/nb-tester/requirements.txt
+++ b/scripts/nb-tester/requirements.txt
@@ -10,10 +10,14 @@ qiskit-ibm-catalog~=0.5.0
 qiskit-addon-sqd~=0.10.0
 qiskit-addon-utils~=0.1.0
 qiskit-addon-mpf~=0.3.0
-qiskit-addon-aqc-tensor~=0.2.0
+qiskit-addon-aqc-tensor[aer,quimb-jax]~=0.2.0
 qiskit-addon-obp~=0.2.0
 qiskit-addon-cutting~=0.10.0
+qiskit-experiments~=0.10.0
 scipy~=1.15.2
 scikit-learn~=1.6.1
 pyscf~=2.8.0; sys.platform != 'win32'
-#networkx~=3.4.2
+python-sat~=1.8.dev16
+gem-suite~=0.1.6
+ffsim~=0.0.54; sys.platform != 'win32'
+sympy~=1.14.0
