replaced Frank's addition of Prac QC to index, qiskit_bot, and notebook checker

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -614,6 +614,18 @@ notifications:
     - "@johannesgreiner"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
+  "learning/courses/quantum-computing-in-practice/introduction":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/mapping":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/applications-of-qc":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/utility-scale-qaoa":
+    - "@livlanes"
+  "learning/courses/quantum-computing-in-practice/index":
+    - "@livlanes"
   "learning/courses/Quantum-machine-learning/Classical-ML-review":
     - "@christopher-porter1"
   "learning/courses/Quantum-machine-learning/Data-encoding":
@@ -623,4 +635,6 @@ notifications:
   "learning/courses/Quantum-machine-learning/Quantum-kernel-methods":
     - "@christopher-porter1"
   "learning/courses/Quantum-machine-learning/QVCs-QNNs":
+    - "@christopher-porter1"
+  "learning/courses/Quantum-machine-learning/index":
     - "@christopher-porter1"
