--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -163,6 +163,12 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+        # Don't test any learning notebooks
+    "learning/courses/quantum-computing-in-practice/introduction.ipynb",
+    "learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb",
+    "learning/courses/quantum-computing-in-practice/mapping.ipynb",
+    "learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb",
+    "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
     "learning/courses/Quantum-machine-learning/Classical-ML-review.ipynb",
     "learning/courses/Quantum-machine-learning/Data-encoding.ipynb",
     "learning/courses/Quantum-machine-learning/Introduction.ipynb",
