Removed hyphen from my own handle in qiskit_bot.yaml

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -627,14 +627,14 @@ notifications:
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
   "learning/courses/Quantum-machine-learning/Classical-ML-review":
-    - "@christopher-porter1"
+    - "@christopherporter1"
   "learning/courses/Quantum-machine-learning/Data-encoding":
-    - "@christopher-porter1"
+    - "@christopherporter1"
   "learning/courses/Quantum-machine-learning/Introduction":
-    - "@christopher-porter1"
+    - "@christopherporter1"
   "learning/courses/Quantum-machine-learning/Quantum-kernel-methods":
-    - "@christopher-porter1"
+    - "@christopherporter1"
   "learning/courses/Quantum-machine-learning/QVCs-QNNs":
-    - "@christopher-porter1"
+    - "@christopherporter1"
   "learning/courses/Quantum-machine-learning/index":
-    - "@christopher-porter1"
+    - "@christopherporter1"
