--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -626,3 +626,15 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
+  "learning/courses/quantum-machine-learning/classical-ml-review":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/data-encoding":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/introduction":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/quantum-kernel-methods":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/qvc-qnn":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/index":
+    - "@christopherporter1"
