--- a/.github/ISSUE_TEMPLATE/courses.yaml
+++ b/.github/ISSUE_TEMPLATE/courses.yaml
@@ -4,6 +4,7 @@ labels: ["content 📄", "course 🎓", "needs triage 🤔"]
 assignees:
   - jhwatrous
   - livlanes
+  - christopherporter1
 
 body:
   - type: markdown
