Follow-on cleanup for issue templates (#3130)
- Add Chris Porter's id
- add emojis
- clean up escape characters that didn't work

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,14 +1,14 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Trouble with your code?
+  - name: Trouble with your code? 😕
     url: https://ibm.co/joinqiskitslack
     about: Ask for debugging help on the Qiskit community Slack when you run into problems with your code.
-  - name: Overall impressions and feedback
+  - name: Overall impressions and feedback 📝
     url: https://ibmxm.iad1.qualtrics.com/jfe/form/SV_7Uq9FCMjZPyTsFM?Q_PopulateResponse={%22QID20%22:%223%22}
     about: Let us know what you think! Provide feedback to help us improve your documentation experience.
-  - name: \[API REF\] Problem with Qiskit SDK
+  - name: (API REF) Problem with Qiskit SDK 💻
     url: https://github.com/Qiskit/qiskit/issues/new/choose
     about: Open an issue in the Qiskit repository for the API reference docs found at https://docs.quantum.ibm.com/api/qiskit.
-  - name: \[API REF\] Problem with Qiskit Runtime
+  - name: (API REF) Problem with Qiskit Runtime 💻
     url: https://github.com/Qiskit/qiskit-ibm-runtime/issues/new/choose
     about: Open an issue in the qiskit-ibm-runtime repository for the API reference docs found at https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/runtime_service.
