--- a/.github/ISSUE_TEMPLATE/courses.yaml
+++ b/.github/ISSUE_TEMPLATE/courses.yaml
@@ -1,9 +1,10 @@
-name: (COURSES) Report a bug/typo or request new content
+name: (COURSES 🎓) Report a bug/typo or request new content
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "course 🎓", "needs triage 🤔"]
 assignees:
   - jhwatrous
   - livlanes
+  - christopherporter1
 
 body:
   - type: markdown
