Use docs-content-team tag in issue templates

--- a/.github/ISSUE_TEMPLATE/guides.yaml
+++ b/.github/ISSUE_TEMPLATE/guides.yaml
@@ -2,8 +2,7 @@ name: (GUIDES AND ADDITIONAL RESOURCES 📜) Report a bug/typo or request new co
 description: Report typos, bugs, out-of-date content, broken links, etc. or make a request for new content
 labels: ["content 📄", "needs triage 🤔"]
 assignees:
-  - abbycross
-  - beckykd
+  - docs-content-team
 
 body:
   - type: markdown
