--- a/.github/ISSUE_TEMPLATE/ui.yml
+++ b/.github/ISSUE_TEMPLATE/ui.yml
@@ -2,8 +2,7 @@ name: UI issue or feature request 📱
 description: Report a rendering or other visual problem with the user interface, or request a new feature.
 labels: ["UI feedback", "infra 🏗️"]
 assignees:
-  - abbycross
-  - beckykd
+  - Qiskit/docs-content-team
   - javabster
   - Eric-Arellano
 
