Try to fix team tag in issue templates

--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -4,7 +4,7 @@ labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
 assignees:
   - miamico
   - nathanearnestnoble
-  - Qiskit/docs-content-team
+  - docs-content-team
 
 body:
   - type: markdown
