--- a/.github/ISSUE_TEMPLATE/courses.yaml
+++ b/.github/ISSUE_TEMPLATE/courses.yaml
@@ -5,7 +5,7 @@ assignees:
   - jhwatrous
   - livlanes
   - christopherporter1
-  - Qiskit/docs-content-team
+  - docs-content-team
 
 body:
   - type: markdown
