Try to fix team tag in issue templates (#3134)
The issue templates are not recognizing the Qiskit/docs-content-team so
I am taking off the `Qiskit/` to see if that solves it.

--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -4,7 +4,7 @@ labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
 assignees:
   - miamico
   - nathanearnestnoble
-  - Qiskit/docs-content-team
+  - docs-content-team
 
 body:
   - type: markdown
@@ -82,3 +82,7 @@ body:
   - type: markdown
     attributes:
       value: Thank you for your feedback! If you are interested in joining the IBM Quantum Feedback Program, <a href="https://www.ibm.com/quantum/feedback-program">sign up here</a>.
+
+  - type: markdown
+    attributes:
+      value: Tagging the [Docs content team](https://github.com/orgs/Qiskit/teams/docs-content-team)
