--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -4,7 +4,6 @@ labels: ["content 📄", "tutorial 📒", "needs triage 🤔"]
 assignees:
   - miamico
   - nathanearnestnoble
-  - docs-content-team
 
 body:
   - type: markdown
@@ -85,4 +84,4 @@ body:
 
   - type: markdown
     attributes:
-      value: Tagging the [Docs content team](https://github.com/orgs/Qiskit/teams/docs-content-team)
+      value: Tagging @Qiskit/docs-content-team
