--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,8 @@ jobs:
         run: npm run check:qiskit-bot
       - name: Check Patterns index
         run: npm run check:patterns-index
+      - name: Check tutorials index
+        run: python scripts/ci/check-tutorials-index.py
       - name: Internal link checker
         run: npm run check:internal-links
       - name: Check orphaned pages
