--- a/.github/ISSUE_TEMPLATE/tutorials.yaml
+++ b/.github/ISSUE_TEMPLATE/tutorials.yaml
@@ -84,4 +84,5 @@ body:
 
   - type: markdown
     attributes:
-      value: Tagging @Qiskit/docs-content-team
+      value: |
+        Tagging @Qiskit/docs-content-team
