--- a/.github/ISSUE_TEMPLATE/guides.yaml
+++ b/.github/ISSUE_TEMPLATE/guides.yaml
@@ -77,3 +77,8 @@ body:
   - type: markdown
     attributes:
       value: Thank you for your feedback! If you are interested in joining the IBM Quantum Feedback Program, <a href="https://www.ibm.com/quantum/feedback-program">sign up here</a>.
+
+  - type: markdown
+    attributes:
+      value: |
+        Tagging @Qiskit/docs-content-team
