--- a/scripts/nb-tester/pyproject.toml
+++ b/scripts/nb-tester/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "nbformat~=5.10.4",
   "ipykernel~=6.29.2",
   "squeaky==0.7.0",
+  "filelock~=3.18.0",
 ]
 
 [[project.authors]]
