--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -34,7 +34,7 @@ jobs:
         timeout-minutes: 350
         run: tox -- --write --test-strategy hardware
 
-      - name: Lint and extract images
+      - name: Normalize notebooks
         run: tox -e fix
 
       - name: Detect changed notebooks
