--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -626,3 +626,32 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
+  "learning/courses/quantum-machine-learning/classical-ml-review":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/data-encoding":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/introduction":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/quantum-kernel-methods":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/qvc-qnn":
+    - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/introduction-to-quantum-computing":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/start-your-quantum-journey":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/quantum-technology":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/business-impacts":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/exam":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/how-to-become-quantum-ready":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/quantum-computing-fundamentals":
+    - "@christopherporter1"
+
