Convert mdx files to executable notebooks

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -55,6 +55,8 @@ notebooks = [
     "docs/guides/primitive-input-output.ipynb",
     "docs/guides/specify-runtime-options.ipynb",
     "docs/guides/visualize-results.ipynb",
+    "docs/guides/run-jobs-batch.ipynb",
+    "docs/guides/run-jobs-session.ipynb",
 ]
 
 # Mock the following notebooks in our extended checks using IBM Quantum's
