fixed one comma in notebook-testing, because of course I did.

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -175,7 +175,7 @@ notebooks = [
     "learning/courses/quantum-diagonalization-algorithms/qda-2-krylov.ipynb",
     "learning/courses/quantum-diagonalization-algorithms/qda-4-sqd-implementation.ipynb",
     "learning/courses/quantum-diagonalization-algorithms/qda-0-introduction.ipynb",
-    "learning/courses/quantum-diagonalization-algorithms/qda-1-vqe.ipynb"
+    "learning/courses/quantum-diagonalization-algorithms/qda-1-vqe.ipynb",
     "learning/courses/quantum-machine-learning/classical-ml-review.ipynb",
     "learning/courses/quantum-machine-learning/data-encoding.ipynb",
     "learning/courses/quantum-machine-learning/introduction.ipynb",
