--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -43,6 +43,21 @@ notebooks = [
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/qiskit-addons-cutting-wires.ipynb",
     "docs/guides/qiskit-addons-utils.ipynb",
+    "docs/guides/bit-ordering.ipynb",
+    "docs/guides/configure-error-mitigation.ipynb",
+    "docs/guides/configure-error-suppression.ipynb",
+    "docs/guides/estimate-job-runtime.ipynb",
+    "docs/guides/execution-modes-rest-api.ipynb",
+    "docs/guides/instances.ipynb",
+    "docs/guides/interoperate-qiskit-qasm2.ipynb",
+    "docs/guides/interoperate-qiskit-qasm3.ipynb",
+    "docs/guides/max-execution-time.ipynb",
+    "docs/guides/measure-qubits.ipynb",
+    "docs/guides/native-gates.ipynb",
+    "docs/guides/primitives-rest-api.ipynb",
+    "docs/guides/repetition-rate-execution.ipynb",
+    "docs/guides/simulate-with-qiskit-sdk-primitives.ipynb",
+    "docs/guides/synthesize-unitary-operators.ipynb",
 ]
 
 # Mock the following notebooks using a 6-qubit local simulator
@@ -57,6 +72,7 @@ notebooks = [
     "docs/guides/visualize-results.ipynb",
     "docs/guides/run-jobs-batch.ipynb",
     "docs/guides/run-jobs-session.ipynb",
+    "docs/guides/monitor-job.ipynb",
 ]
 
 # Mock the following notebooks in our extended checks using IBM Quantum's
@@ -77,6 +93,11 @@ notebooks = [
     "docs/guides/qiskit-addons-sqd-get-started.ipynb",
     "docs/guides/multiverse-computing-singularity.ipynb",
     "docs/guides/qunova-chemistry.ipynb",
+    "docs/guides/ai-transpiler-passes.ipynb",
+    "docs/guides/qiskit-transpiler-service.ipynb",
+    "docs/guides/primitives.ipynb",
+    "docs/guides/run-jobs-batch.ipynb",
+    "docs/guides/run-jobs-session.ipynb",
 ]
 
 # Only run the following notebooks in our fortnightly cron job on real hardware.
