(Hopefully) fix page rendering issue

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -154,6 +154,13 @@ notebooks = [
     # removing the page soon so we've decided not to fix it.
     "docs/guides/pulse.ipynb",
 
+    # These notebooks have code snippets which are embedded in cloud/legacy tags
+    #  and can't be run until we convert them to testable snippets
+    "docs/guides/retired-qpus.ipynb",
+    "docs/guides/estimate-job-run-time.ipynb",
+    "docs/guides/serverless-port-code.ipynb",
+
+
     # We never run tutorials notebooks
     "docs/tutorials/advanced-techniques-for-qaoa.ipynb",
     "docs/tutorials/ai-transpiler-introduction.ipynb",
