Added Basics of quantum information course

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -170,4 +170,18 @@ notebooks = [
     "learning/courses/quantum-computing-in-practice/mapping.ipynb",
     "learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb",
     "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/circuits.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb"
 ]
