--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -626,3 +626,33 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
+  "learning/courses/basics-of-quantum-information/index":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/classical-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/classical-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/circuits":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
+    - "@John-Watrous"
