Quantum Business foundation (#3155)
Co-authored-by: christopherporter1 <125992427+christopherporter1@users.noreply.github.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -626,6 +626,20 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
+  "learning/courses/quantum-business-foundations/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/introduction-to-quantum-computing":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/start-your-quantum-journey":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/quantum-technology":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/business-impacts":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/how-to-become-quantum-ready":
+    - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/quantum-computing-fundamentals":
+    - "@christopherporter1"
   "learning/courses/quantum-machine-learning/classical-ml-review":
     - "@christopherporter1"
   "learning/courses/quantum-machine-learning/data-encoding":
