--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -201,5 +201,12 @@ notebooks = [
     "learning/courses/quantum-machine-learning/data-encoding.ipynb",
     "learning/courses/quantum-machine-learning/introduction.ipynb",
     "learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb",
-    "learning/courses/quantum-machine-learning/qvc-qnn.ipynb"
+    "learning/courses/quantum-machine-learning/qvc-qnn.ipynb",
+    "learning/courses/quantum-business-foundations/start-your-quantum-journey.ipynb",
+    "learning/courses/quantum-business-foundations/introduction-to-quantum-computing.ipynb",
+    "learning/courses/quantum-business-foundations/quantum-technology.ipynb",
+    "learning/courses/quantum-business-foundations/business-impacts.ipynb",
+    "learning/courses/quantum-business-foundations/exam.ipynb",
+    "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
+    "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
 ]
