Added Basics of Quantum Information course (#3171)
- Added notebooks for Basics of Quantum Information
- Modified `learning/index.mdx`, `qiskit_bot.yaml`, both dictionaries,
and `notebook-testing.toml`

This PR does not include the badging exam page.

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>
Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -652,3 +652,33 @@ notifications:
     - "@christopherporter1"
   "learning/courses/quantum-machine-learning/index":
     - "@christopherporter1"
+  "learning/courses/basics-of-quantum-information/index":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/classical-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/single-systems/quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/classical-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/circuits":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/introduction":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding":
+    - "@John-Watrous"
+  "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
+    - "@John-Watrous"
