--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -202,6 +202,20 @@ notebooks = [
     "learning/courses/quantum-machine-learning/introduction.ipynb",
     "learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb",
     "learning/courses/quantum-machine-learning/qvc-qnn.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb",
+    "learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb",
+    "learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/circuits.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/inner-products-and-projections.ipynb",
+    "learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/introduction.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/quantum-teleportation.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding.ipynb",
+    "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb",
     "learning/courses/quantum-business-foundations/start-your-quantum-journey.ipynb",
     "learning/courses/quantum-business-foundations/introduction-to-quantum-computing.ipynb",
     "learning/courses/quantum-business-foundations/quantum-technology.ipynb",
