Add the Quantum Diagonalization Algorithms course (#3162)
Adding the Quantum Diagonalization Algorithms course notebooks and
images.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -626,6 +626,20 @@ notifications:
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/index":
     - "@livlanes"
+  "learning/courses/quantum-diagonalization-algorithms/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/introduction":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/vqe":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/krylov":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/sqd-overview":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/sqd-implementation":
+    - "@christopherporter1"
+  "learning/courses/quantum-diagonalization-algorithms/skqd":
+    - "@christopherporter1"
   "learning/courses/quantum-business-foundations/index":
     - "@christopherporter1"
   "learning/courses/quantum-business-foundations/introduction-to-quantum-computing":
