--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -197,6 +197,12 @@ notebooks = [
     "learning/courses/quantum-computing-in-practice/mapping.ipynb",
     "learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb",
     "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/skqd.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/krylov.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/sqd-implementation.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/introduction.ipynb",
+    "learning/courses/quantum-diagonalization-algorithms/vqe.ipynb",
     "learning/courses/quantum-machine-learning/classical-ml-review.ipynb",
     "learning/courses/quantum-machine-learning/data-encoding.ipynb",
     "learning/courses/quantum-machine-learning/introduction.ipynb",
