qiskit in class for quantum mechanics

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -696,3 +696,11 @@ notifications:
     - "@John-Watrous"
   "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
     - "@John-Watrous"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb":
+    - "@christopherporter1"
