--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -229,4 +229,8 @@ notebooks = [
     "learning/courses/quantum-business-foundations/exam.ipynb",
     "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
+    "learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb",
+    "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb",
+    "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb",
+    "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb",
 ]
