--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "@types/node": "^20.6.2",
     "@types/yargs": "^17.0.28",
     "prettier": "3.5.3",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.8.3"
   }
 }
