--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -326,6 +326,8 @@ notifications:
     - "@beckykd"
     - "@abbycross"
     - "@SamFerracin"
+  "docs/guides/DAG-representation":
+    - "@kaelynj"
   "docs/migration-guides/index":
     - "@javabster"
   "docs/migration-guides/metapackage-migration":
