Switch testing to `ibm_cloud`

--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -40,7 +40,7 @@ runs:
       run: |
         from qiskit_ibm_runtime import QiskitRuntimeService
         QiskitRuntimeService.save_account(
-            channel="ibm_quantum",
+            channel="ibm_cloud",
             instance="${{ inputs.instance }}",
             token="${{ inputs.ibm-quantum-token }}",
             set_as_default=True
