--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -65,6 +65,7 @@ jobs:
           # if all files are being tested.
           install-linux-deps: ${{ steps.check-deps.outputs.NEEDS_EXTRA_DEPS }}
           ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
+          instance: ${{ secrets.IBM_QUANTUM_TEST_INSTANCE }}
 
       - name: Execute notebooks
         env:
