--- a/.github/workflows/notebook-test-extended.yml
+++ b/.github/workflows/notebook-test-extended.yml
@@ -32,7 +32,7 @@ jobs:
         uses: ./.github/actions/set-up-notebook-testing
         with:
           ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
-          instance: "client-enablement/documentation/qiskit-documenta"
+          instance: ${{ secrets.IBM_QUANTUM_TEST_INSTANCE }}
           install-linux-deps: true
 
       - name: Execute notebooks
