--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -487,6 +487,11 @@ notifications:
     - "@abbycross"
     - "@pandasa123"
     - "@johannesgreiner"
+  "docs/guides/colibri-td-pde":
+    - "@abbycross"
+    - "@pandasa123"
+    - "@johannesgreiner"
+    - "Henri-ColibrITD"
   "docs/guides/qiskit-addons-sqd":
     - "@kaelynj"
   "docs/guides/qiskit-addons-sqd-get-started":
@@ -612,6 +617,11 @@ notifications:
     - "@ThomasMerkh"
     - "@alexshih"
     - "@johannesgreiner"
+  "docs/tutorials/colibri-td-pde":
+    - "@abbycross"
+    - "@pandasa123"
+    - "@johannesgreiner"
+    - "Henri-ColibrITD"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
   "learning/courses/quantum-computing-in-practice/introduction":
