--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -158,6 +158,8 @@ notebooks = [
     "docs/guides/retired-qpus.ipynb",
     "docs/guides/estimate-job-run-time.ipynb",
     "docs/guides/serverless-port-code.ipynb",
+    "docs/guides/colibri-td-pde",
+
 
 
     # We never run tutorials notebooks
@@ -190,6 +192,8 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+    "docs/tutorials/colibri-td-pde",
+
 
     # Don't test any learning notebooks
     "learning/courses/quantum-computing-in-practice/introduction.ipynb",
