toc and qiskit_bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -464,6 +464,11 @@ notifications:
     - "@ThomasMerkh"
     - "@alexshih"
     - "@johannesgreiner"
+  "docs/guides/global-data-quantum-optimizer":
+    - "@abbycross"
+    - "@pandasa123" 
+    - "@johannesgreiner"
+    - "@manuelmartin3"
   "docs/guides/qedma-qesem":
     - "@kaelynj"
     - "@abbycross"
@@ -612,6 +617,11 @@ notifications:
     - "@ThomasMerkh"
     - "@alexshih"
     - "@johannesgreiner"
+  "docs/tutorials/global-data-quantum-optimizer":
+    - "@abbycross"
+    - "@pandasa123" 
+    - "@johannesgreiner"
+    - "@manuelmartin3"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
   "learning/courses/quantum-computing-in-practice/introduction":
