--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -491,7 +491,7 @@ notifications:
     - "@abbycross"
     - "@pandasa123"
     - "@johannesgreiner"
-    - "Henri-ColibrITD"
+    - "@Henri-ColibrITD"
   "docs/guides/qiskit-addons-sqd":
     - "@kaelynj"
   "docs/guides/qiskit-addons-sqd-get-started":
