--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -148,6 +148,7 @@ notebooks = [
 
     # This notebook might work but we didn't have time to test it before merging
     "docs/guides/kipu-optimization.ipynb",
+    "docs/guides/colibri-td-pde.ipynb",
 
     # This is broken with the most recent versions of Qiskit/Runtime, but we're
     # removing the page soon so we've decided not to fix it.
@@ -158,6 +159,7 @@ notebooks = [
     "docs/guides/retired-qpus.ipynb",
     "docs/guides/estimate-job-run-time.ipynb",
     "docs/guides/serverless-port-code.ipynb",
+
 
 
     # We never run tutorials notebooks
@@ -190,6 +192,8 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+    "docs/tutorials/colibri-td-pde.ipynb",
+
 
     # Don't test any learning notebooks
     "learning/courses/quantum-computing-in-practice/introduction.ipynb",
