--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -148,6 +148,7 @@ notebooks = [
 
     # This notebook might work but we didn't have time to test it before merging
     "docs/guides/kipu-optimization.ipynb",
+    "docs/guides/global-data-quantum-optimizer.ipynb",
     "docs/guides/colibri-td-pde.ipynb",
 
     # This is broken with the most recent versions of Qiskit/Runtime, but we're
@@ -192,8 +193,8 @@ notebooks = [
     "docs/tutorials/sample-based-quantum-diagonalization.ipynb",
     "docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb",
     "docs/tutorials/nishimori-phase-transition.ipynb",
+    "docs/tutorials/global-data-quantum-optimizer.ipynb",
     "docs/tutorials/colibri-td-pde.ipynb",
-
 
     # Don't test any learning notebooks
     "learning/courses/quantum-computing-in-practice/introduction.ipynb",
