--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -57,6 +57,7 @@ notebooks = [
     "docs/guides/repetition-rate-execution.ipynb",
     "docs/guides/simulate-with-qiskit-sdk-primitives.ipynb",
     "docs/guides/synthesize-unitary-operators.ipynb",
+    "docs/guides/DAG-representation.ipynb",
 ]
 
 # Mock the following notebooks using a 6-qubit local simulator
