--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -257,6 +257,22 @@ notebooks = [
     "learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb",
     "learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/purifications.ipynb",
     "learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/shor-code.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/discretization-of-errors.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/pauli-operations-and-observables.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/repetition-code-revisited.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/stabilizer-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/toric-code.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/other-code-families.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
     "learning/courses/quantum-business-foundations/start-your-quantum-journey.ipynb",
     "learning/courses/quantum-business-foundations/introduction-to-quantum-computing.ipynb",
     "learning/courses/quantum-business-foundations/quantum-technology.ipynb",
