--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -269,4 +269,20 @@ notebooks = [
     "learning/courses/quantum-business-foundations/exam.ipynb",
     "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
+        "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/shor-code.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/discretization-of-errors.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/pauli-operations-and-observables.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/repetition-code-revisited.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/stabilizer-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/toric-code.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/other-code-families.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
+    "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
 ]
