renaming (perhaps a capitalization error early on?)

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -716,13 +716,15 @@ notifications:
     - "@jhwatrous"
   "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
     - "@John-Watrous"
-  "learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit1.ipynb":
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/index":
     - "@christopherporter1"
-  "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit1.ipynb":
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit":
     - "@christopherporter1"
-  "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit1.ipynb":
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit":
     - "@christopherporter1"
-  "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit1.ipynb":
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit":
     - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/index":
     - "@jhwatrous"
