John's Fundamentals of Error Correction course (#3285)
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -790,3 +790,37 @@ notifications:
     - "@jhwatrous"
   "learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity":
     - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/index":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/shor-code":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/discretization-of-errors":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/introduction":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/pauli-operations-and-observables":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/repetition-code-revisited":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/stabilizer-formalism/stabilizer-codes":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/introduction":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/toric-code":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/other-code-families":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/introduction":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation":
+    - "@jhwatrous"
+  "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
+    - "@jhwatrous"
