utility scale draft

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -652,3 +652,9 @@ notifications:
     - "@christopherporter1"
   "learning/courses/quantum-machine-learning/index":
     - "@christopherporter1"
+  "learning/courses/utility-scale-quantum-computing/index":
+    - "@christopherporter1"
+  "learning/courses/utility-scale-quantum-computing/lesson-01-introduction":
+    - "@christopherporter1"
+  "learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits":
+    - "@christopherporter1"
