--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -209,4 +209,6 @@ notebooks = [
     "learning/courses/quantum-business-foundations/exam.ipynb",
     "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
+    "learning/courses/utility-scale-quantum-computing/lesson-01-introduction.ipynb",
+    "learning/courses/utility-scale-quantum-computing/lesson-02-bits-gates-and-circuits.ipynb",
 ]
